--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
                         </a>
                     </li>
                 </ul>
+                <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+                    <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                        <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
+                        <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
+                    </svg>
+                </button>
+                
+                <div class="menu-container" id="menu-container" data-menu>
+                    <div class="navigation"></div>
+                    <div class="contacts"></div>
+                </div>
             </nav>
         </div>        
     </header>
