--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
         <div class="container">
             <nav class="main-nav">
                 <a href="/" class="logo"><span>Web</span>Studio</a>
-                <ul class="site-nav">
+                <div class="menu-container" id="menu-container" data-menu>
+                    <div class="navigation">
+                        <ul class="site-nav">
                     <li class="item"><a href="./index.html" class="link current">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
                     <li class="item"><a href="#" class="link">Контакты</a></li>
-                </ul>
-                <ul class="auth-nav">
+                        </ul>
+                    </div>
+                    <div class="contacts">
+                        <ul class="auth-nav">
                     <li class="item item-mail">                         
                         <a href="mailto:info@devstudio.com" class="link">
                             <svg class="envelope" width="16" height="12">
@@ -37,18 +41,15 @@
                             +38 096 111 11 11
                         </a>
                     </li>
-                </ul>
+                        </ul>
+                    </div>
+                </div>
                 <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
                     <svg width="40" height="40" aria-label="Переключатель мобильного меню">
                         <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
                         <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
                     </svg>
                 </button>
-                
-                <div class="menu-container" id="menu-container" data-menu>
-                    <div class="navigation"></div>
-                    <div class="contacts"></div>
-                </div>
             </nav>
         </div>        
     </header>
@@ -445,5 +446,6 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
