--- a/index.html
+++ b/index.html
@@ -108,7 +108,16 @@
                 <ul class="workes">
                     <li class="item">
                         <div class="workes-box">
-                            <img src="./images/img1.jpg" alt="Программирование" width="370" height="294">
+                            <img 
+                                srcset="
+                                    ./images/img1.jpg 1x,
+                                    ./images/img1@2x.jpg 2x
+                                    " 
+                                src="./images/img1.jpg" 
+                                alt="Программирование" 
+                                width="370" 
+                                height="294"
+                                >
                             <p class="workes-text">Десктопные приложения</p>
                         </div>   
                     </li>
@@ -133,7 +142,7 @@
                 <h2 class="section-title teams">Наша команда</h2>
                 <ul class="team">
                     <li class="item">
-                        <img src="./images/foto1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        <img  src="./images/foto1.jpg" alt="Игорь Демьяненко" width="270" height="260">
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p class="team-text">Product Designer</p>
                         <ul class="social">
