--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
             <button data-modal-open class="hero-button ">Заказать услугу</button>
         </section>
         <!-- Особенности работы -->
-        <section class="section features-container">
-            <div class="container">
-                <!-- <h2>Особенности</h2> -->
-                <ul class="features">
-                    <li class="item">
+        <section class="container">
+            <!-- <h2>Особенности</h2> -->
+            <ul class="features">
+                    <li class="features-item">
                         <div class="features-icon">
                             <svg class="antenna" width="65" height="70">
                                 <use href="./images/sprite.svg#icon-antenna"></use>
@@ -71,7 +70,7 @@
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="item">
+                    <li class="features-item">
                         <div class="features-icon">
                             <svg class="clock" width="67" height="70">
                                 <use href="./images/sprite.svg#icon-clock"></use>
@@ -80,7 +79,7 @@
                         <h3 class="features-title">Пунктуальность</h3>
                         <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="item">
+                    <li class="features-item">
                         <div class="features-icon">
                             <svg class="diagram" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-diagram"></use>
@@ -89,7 +88,7 @@
                         <h3 class="features-title">Планирование</h3>
                         <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="item">
+                    <li class="features-item">
                         <div class="features-icon">
                             <svg class="astronaut" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-astronaut"></use>
@@ -98,8 +97,7 @@
                         <h3 class="features-title">Современные технологии</h3>
                         <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
-                </ul>
-            </div>     
+            </ul>   
         </section>    
         <!-- Чем мы занимаемся -->
         <section class="section workes-container">
