--- a/index.html
+++ b/index.html
@@ -135,11 +135,10 @@
             </div>
         </section>
         <!-- Наша команда -->
-        <section class="section team-container">
-            <div class="container">
-                <h2 class="section-title teams">Наша команда</h2>
-                <ul class="team">
-                    <li class="item">
+        <section class="container team-container">
+            <h2 class="section-title teams">Наша команда</h2>
+            <ul class="team">
+                    <li class="team-item">
                         <img  src="./images/foto1.jpg" alt="Игорь Демьяненко" width="270" height="260">
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p class="team-text">Product Designer</p>
@@ -174,7 +173,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="item">
+                    <li class="team-item">
                         <img src="./images/foto2.jpg" alt="Ольга Репина" width="270" height="260">
                         <h3 class="team-title">Ольга Репина</h3>
                         <p class="team-text">Frontend Developer</p>
@@ -209,7 +208,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="item">
+                    <li class="team-item">
                         <img src="./images/foto3.jpg" alt="Николай Тарасов" width="270" height="260">
                         <h3 class="team-title">Николай Тарасов</h3>
                         <p class="team-text">Marketing</p>
@@ -244,7 +243,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="item">
+                    <li class="team-item">
                         <img src="./images/foto4.jpg" alt="Михаил Ермаков" width="270" height="260">
                         <h3 class="team-title">Михаил Ермаков</h3>
                         <p class="team-text">UI Designer</p>
@@ -279,8 +278,7 @@
                             </li>
                         </ul>
                     </li>
-                </ul>
-            </div>
+            </ul>
         </section>
         <!-- Постоянные клиенты -->
         <section class="section clients-container">
