added clients mobile

--- a/index.html
+++ b/index.html
@@ -281,10 +281,9 @@
             </ul>
         </section>
         <!-- Постоянные клиенты -->
-        <section class="section clients-container">
-            <div class="container">
-                <h2 class="clients-title">Постоянные клиенты</h2>
-                <ul class="clients">
+        <section class="container clients-container">
+             <h2 class="section-title">Постоянные клиенты</h2>
+            <ul class="clients">
                     <li class="clients-list">
                         <a href="#" class="client-link">
                             <svg class="logo-1" width="44" height="49">
@@ -327,8 +326,7 @@
                             </svg>
                         </a>
                     </li>
-                </ul>
-            </div>
+            </ul>
         </section>
     </main>    
     <!-- Футер -->
