added footer mobile

--- a/index.html
+++ b/index.html
@@ -332,12 +332,12 @@
     <!-- Футер -->
     <footer class="footer">
         <div class="footer-content">
-                <a href="#" class="logo"><span>Web</span>Studio</a>
+                <a href="#" class="logo footer-logo"><span>Web</span>Studio</a>
                 <address>
                     <ul class="contacte">
-                        <li class="item"><a href="#" class="address-link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="item"><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
-                        <li class="item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
+                        <li class="contacte-item"><a href="#" class="address-link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="contacte-item"><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
+                        <li class="contacte-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
         </div>
