--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
             <h2 class="section-title teams">Наша команда</h2>
             <ul class="team">
                     <li class="team-item">
-                        <img  src="./images/foto1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        <img  
+                        alt="Игорь Демьяненко" 
+                        srcset="./images/foto1-mobile.jpg 1x,
+                        ./images/foto1@2x-mobile.jpg 2x"
+                        src="./images/foto1-mobile.jpg"
+                        sizes="(min-width: 768px) 25vw, (min-width: 480px) 50vw, 100vw" 
+                        >
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p class="team-text">Product Designer</p>
                         <ul class="social">
@@ -174,7 +180,12 @@
                         </ul>
                     </li>
                     <li class="team-item">
-                        <img src="./images/foto2.jpg" alt="Ольга Репина" width="270" height="260">
+                        <img 
+                        alt="Ольга Репина" 
+                         srcset="./images/foto2-mobile.jpg 1x,
+                        ./images/foto2@2x-mobile.jpg 2x"
+                        src="./images/foto2-mobile.jpg" 
+                        >
                         <h3 class="team-title">Ольга Репина</h3>
                         <p class="team-text">Frontend Developer</p>
                         <ul class="social">
@@ -209,7 +220,12 @@
                         </ul>
                     </li>
                     <li class="team-item">
-                        <img src="./images/foto3.jpg" alt="Николай Тарасов" width="270" height="260">
+                        <img 
+                        alt="Николай Тарасов" 
+                         srcset="./images/foto3-mobile.jpg 1x,
+                        ./images/foto3@2x-mobile.jpg 2x"
+                        src="./images/foto3-mobile.jpg" 
+                        >
                         <h3 class="team-title">Николай Тарасов</h3>
                         <p class="team-text">Marketing</p>
                         <ul class="social">
@@ -244,7 +260,11 @@
                         </ul>
                     </li>
                     <li class="team-item">
-                        <img src="./images/foto4.jpg" alt="Михаил Ермаков" width="270" height="260">
+                        <img 
+                        alt="Михаил Ермаков" 
+                         srcset="./images/foto4-mobile.jpg 1x,
+                        ./images/foto4@2x-mobile.jpg 2x"
+                        src="./images/foto4-mobile.jpg" >
                         <h3 class="team-title">Михаил Ермаков</h3>
                         <p class="team-text">UI Designer</p>
                         <ul class="social">
