--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </section>
         <!-- Наша команда -->
         <section class="container team-container">
-            <h2 class="section-title teams">Наша команда</h2>
+            <h2 class="section-title">Наша команда</h2>
             <ul class="team">
                     <li class="team-item">
                         <picture>
