corrected clients section

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             </ul>
         </section>
         <!-- Постоянные клиенты -->
-        <section class="container clients-container">
+        <section class="container">
              <h2 class="section-title">Постоянные клиенты</h2>
             <ul class="clients">
                     <li class="clients-list">
