--- a/portfolio.html
+++ b/portfolio.html
@@ -3,44 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet"> -->
     <link rel="stylesheet" href="./css/portfolio.min.css">
     <title>Portfolio</title>
 </head>
 <body>
     <!-- Шапка сайта -->
     <header>
-        <div class="container">
-            <nav class="main-nav">
-                <a href="/" class="logo"><span>Web</span>Studio</a>
-                <ul class="site-nav">
-                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                    <li class="item"><a href="#" class="link">Контакты</a></li>
-                </ul>
-                <ul class="auth-nav">
-                    <li class="item item-mail">
-                        <a href="mailto:info@devstudio.com" class="link">
-                            <svg class="envelope" width="16" height="12">
-                                <use href="./images/sprite.svg#icon-envelope"></use>
-                            </svg>
-                            info@devstudio.com
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="tel:+380961111111" class="link">
-                            <svg class="smartphone" width="10" height="16">
-                                <use href="./images/sprite.svg#icon-smartphone"></use>
-                            </svg>
-                            +38 096 111 11 11
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+        <nav class="main-nav">
+            <a href="/" class="logo"><span>Web</span>Studio</a>
+            <div class="menu-container" id="menu-container" data-menu>
+                <div class="navigation">
+                    <ul class="site-nav">
+                        <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                        <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                        <li class="item"><a href="#" class="link">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="contacts">
+                    <ul class="auth-nav">
+                        <li class="item item-mail">
+                            <a href="mailto:info@devstudio.com" class="link">
+                                <svg class="envelope" width="16" height="12">
+                                    <use href="./images/sprite.svg#icon-envelope"></use>
+                                </svg>
+                                info@devstudio.com
+                            </a>
+                        </li>
+                        <li class="item">
+                            <a href="tel:+380961111111" class="link">
+                                <svg class="smartphone" width="10" height="16">
+                                    <use href="./images/sprite.svg#icon-smartphone"></use>
+                                </svg>
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+                <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                    <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
+                    <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
+                </svg>
+            </button>
+        </nav>
+        </header>
     <main>
      <!--Наши проекты -->
         <section class="projects-container">
@@ -204,64 +211,64 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <a href="#" class="logo"><span>Web</span>Studio</a>
-                <address>
-                    <ul class="contacte">
-                        <li class="item"><a href="#" class="address-link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="item"><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
-                        <li class="item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
-                    </ul>
-                </address>
-            </div>
-            <div class="resources">
-                <h3 class="resources-title">присоединяйтесь</h3>
-                <ul class="resources-list">
-                    <li class="resources-item">
-                        <a href="#" class="resources-link">
-                            <svg class="instagram" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
+        <div class="footer-content">
+            <a href="#" class="logo footer-logo"><span>Web</span>Studio</a>
+            <address>
+                <ul class="contacte">
+                    <li class="contacte-item"><a href="#" class="address-link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="contacte-item"><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
                     </li>
-                    <li class="resources-item">
-                        <a href="#" class="resources-link">
-                            <svg class="twitter" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="resources-item">
-                        <a href="#" class="resources-link">
-                            <svg class="facebook" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="resources-item">
-                        <a href="#" class="resources-link">
-                            <svg class="linkedin" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
+                    <li class="contacte-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
                 </ul>
-            </div>
-            <div>
-                <form action="#" class="subscription">
-                    <label for="mail" class="subscription-text">Подпишитесь на рассылку</label>
-                    <div class="subscription-btns">
-                        <input type="email" name="mail" placeholder="E-mail" autocomplete="off">
-                        <button type="submit">Подписаться
-                            <svg class="send" width="24" height="24">
-                                <use href="./images/sprite.svg#icon-send"></use>
-                            </svg>
-                        </button>
-                    </div>
-                </form>
-            </div>
+            </address>
         </div>
-    </footer>
+        <div class="resources">
+            <h3 class="resources-title">присоединяйтесь</h3>
+            <ul class="resources-list">
+                <li class="resources-item">
+                    <a href="#" class="resources-link">
+                        <svg class="instagram" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="resources-item">
+                    <a href="#" class="resources-link">
+                        <svg class="twitter" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="resources-item">
+                    <a href="#" class="resources-link">
+                        <svg class="facebook" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="resources-item">
+                    <a href="#" class="resources-link">
+                        <svg class="linkedin" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <form action="#" class="subscription">
+                <label for="mail" class="subscription-text">Подпишитесь на рассылку</label>
+                <div class="subscription-btns">
+                    <input type="email" name="mail" placeholder="E-mail" autocomplete="off">
+                    <button type="submit">Подписаться
+                        <svg class="send" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </div>
+            </form>
+        </div>
+        </footer>
 </body>
 </html>
+<script src="./js/menu.js"></script>
