--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                         <input type="checkbox" class="check-box" name="agreement" value="agreement" id="agreement">
                         <span class="icon-border"></span>                     
                         
-                        <span>Соглашаюсь с рассылкой и принимаю
+                        <span class="check-text" >Соглашаюсь с рассылкой и принимаю
                             <a href="#" class="form-link">Условия договора</a>
                         </span>    
                     </label>            
