--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,8 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <nav class="main-nav">
+        <div class="container">
+            <nav class="main-nav">
             <a href="/" class="logo"><span>Web</span>Studio</a>
             <div class="menu-container" id="menu-container" data-menu>
                 <div class="navigation">
@@ -46,7 +47,8 @@
                     <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
                 </svg>
             </button>
-        </nav>
+            </nav>
+        </div>
         </header>
     <main>
      <!--Наши проекты -->
