--- a/index.html
+++ b/index.html
@@ -9,44 +9,47 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <nav class="main-nav">
-            <a href="/" class="logo"><span>Web</span>Studio</a>
-            <div class="menu-container" id="menu-container" data-menu>
+        <div class="container">
+            <nav class="main-nav">
+                <a href="/" class="logo"><span>Web</span>Studio</a>
+                <div class="menu-container" id="menu-container" data-menu>
                     <div class="navigation">
                         <ul class="site-nav">
-                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                    <li class="item"><a href="#" class="link">Контакты</a></li>
+                            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                            <li class="item"><a href="#" class="link">Контакты</a></li>
                         </ul>
                     </div>
                     <div class="contacts">
                         <ul class="auth-nav">
-                    <li class="item item-mail">                         
-                        <a href="mailto:info@devstudio.com" class="link">
-                            <svg class="envelope" width="16" height="12">
-                                <use href="./images/sprite.svg#icon-envelope"></use>
-                            </svg>
-                            info@devstudio.com
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="tel:+380961111111" class="link">
-                            <svg class="smartphone" width="10" height="16">
-                                <use href="./images/sprite.svg#icon-smartphone"></use>
-                            </svg>
-                            +38 096 111 11 11
-                        </a>
-                    </li>
+                            <li class="item item-mail">
+                                <a href="mailto:info@devstudio.com" class="link">
+                                    <svg class="envelope" width="16" height="12">
+                                        <use href="./images/sprite.svg#icon-envelope"></use>
+                                    </svg>
+                                    info@devstudio.com
+                                </a>
+                            </li>
+                            <li class="item">
+                                <a href="tel:+380961111111" class="link">
+                                    <svg class="smartphone" width="10" height="16">
+                                        <use href="./images/sprite.svg#icon-smartphone"></use>
+                                    </svg>
+                                    +38 096 111 11 11
+                                </a>
+                            </li>
                         </ul>
                     </div>
-            </div>
-            <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+                </div>
+                <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
                     <svg width="40" height="40" aria-label="Переключатель мобильного меню">
                         <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
                         <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
                     </svg>
-            </button>
-        </nav>      
+                </button>
+            </nav>
+
+        </div>
     </header>
     <main>
         <!-- Герой -->
