--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                                 <picture>
                                     <source
                                     srcset="./images/portfolio/portfolio1.webp 1x,
-                                    /images/portfolio/portfolio1@2x.webp 2x
+                                    ./images/portfolio/portfolio1@2x.webp 2x
                                     "
                                     type="image/webp"
                                     >
