--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             </div>
         </section>    
         <!-- Чем мы занимаемся -->
-        <section class="section workes-container">
-            <div class="container">
+        <section class="section">
+            <div class="container workes-container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="workes">
                     <li class="item">
